--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
 
     <!-- Caixa principal propagandas -->
     <div id="box-propaganda">
-
         <div class="explicacoes">
-
             <!-- caixa blacklists -->
             <div class="blacklists">
                 <svg width="44" height="40" xmlns="http://www.w3.org/2000/svg">
@@ -166,14 +164,11 @@
 
         <!-- logo do footer -->
         <div class="logo-footer">
-
             <img src="./images/logo.svg" alt="" width="60px" height="60px">
-
         </div>
 
         <!-- links -->
         <div class="links-footer">
-
             <div class="column faqs">
                 <ul>
                     <li><a href="#">FAQs</a></li>
@@ -193,22 +188,18 @@
                     <li><a href="#">Install Guide</a></li>
                 </ul>
             </div>
-
         </div>
 
         <!-- icones dos aplicativos -->
         <div class="icons-footer">
-
             <div class="icons-app">
                 <img src="./images/icon-facebook.svg" alt="">
 
-                <img src="./images/icon-twitter.svg" alt="">
+                <img src="./images/icon-twitter.svg" alt="" class="img-twitter">
 
                 <img src="./images/icon-instagram.svg" alt="">
             </div>
-
         </div>
-
     </footer>
     <!-- FIM -->
 </body>
